added logo and minor visual changes

--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -3,4 +3,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Almatech SA's privacy policy is described here. It is pretty short for now :)</p>
