--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <h1 class="display-1">Welcome</h1>
+
+    <p>Welcome to Almatech's Operation Management System. Register <a asp-area="Identity" asp-page="/Account/Register">here</a> if you are new.</p>
+
 </div>
